fix(app): scrollbar hegiht

--- a/app/style/misc.scss
+++ b/app/style/misc.scss
@@ -1,5 +1,6 @@
 ::-webkit-scrollbar {
     width: 9px;
+    height: 9px;
     background-color: var(--scroll-bg);
 }
 
